--- a/chat/src/main/res/menu/main_bottom_navigation.xml
+++ b/chat/src/main/res/menu/main_bottom_navigation.xml
@@ -5,7 +5,7 @@
     <item
         android:id="@+id/conversation_list"
         android:icon="@drawable/bottom_conversation_menu_selector"
-        android:title="野火"
+        android:title="穿云燕"
         app:showAsAction="never" />
     <item
         android:id="@+id/contact"
